fix spacing

--- a/styles/style.css
+++ b/styles/style.css
@@ -657,6 +657,7 @@ Adapted from W3Schools - https://www.w3schools.com/howto/howto_css_stacked_form.
   font-size: 13px;
   line-height: 12px;
   clear: both;
+  margin-top: 50px;
 }
 .footer-row {
   width: 95%; /* gap between each row including 3 rows*/
@@ -856,6 +857,7 @@ https://www.sitepoint.com/css-typewriter-effect/ */
   animation: job-typing 1.5s steps(18, end) forwards,
     blink 0.5s step-end infinite alternate;
   width: 0;
+  margin-bottom: 50px;
 }
 
 @keyframes job-typing {
